plugins {
    id 'org.springframework.boot' version '2.5.3'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'war'
    id 'checkstyle'
}

group = 'az.hrportal'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.58'
    implementation 'io.jsonwebtoken:jjwt-api:0.10.7'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.10.7'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.10.7'
    implementation "org.mapstruct:mapstruct:${mapstruct_version}", "org.projectlombok:lombok:${lombok_version}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstruct_version}", "org.projectlombok:lombok:${lombok_version}"
    implementation("io.springfox:springfox-swagger2:$swaggerVersion") {
        exclude module: 'mapstruct'
    }
//    implementation group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.1.20'
    implementation "com.itextpdf:layout:${itextVersion}"
    implementation "com.itextpdf:io:${itextVersion}"
    implementation "com.itextpdf:kernel:${itextVersion}"

//    implementation 'org.apache.pdfbox:pdfbox:2.0.4'
    implementation "io.springfox:springfox-bean-validators:2.9.2"
    implementation "io.springfox:springfox-swagger-ui:$swaggerVersion"
    implementation "org.json:json:$jsonVersion"
    runtimeOnly 'org.postgresql:postgresql'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}
checkstyle {
    toolVersion = "$checkstyleVersion"
    configFile = file("${rootProject.projectDir}/checkstyle/checkstyle.xml")
    ignoreFailures = true
}


tasks.withType(Checkstyle) {
    exclude '**/org/tempuri/**'
    reports {
        xml.enabled true
        html.enabled true
    }
}
